--- a/2015-09-01.html
+++ b/2015-09-01.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      哼哼。
+      我，就像一顆流星。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-02 -</div>
+    <div id="date">- 2015-09-01 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
