--- a/2015-09-02.html
+++ b/2015-09-02.html
@@ -7,13 +7,11 @@
     <title>ChawLann</title>
   </head>
   <body>
-    <div id="the-girl-say" style="margin-top: 20vh">
-      那我 去写代码
-      <br />
-      <img src="static/images/20150904.jpg" style="width: 30vw;" />
+    <div id="the-girl-say">
+      哼哼。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-04 -</div>
+    <div id="date">- 2015-09-02 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
