--- a/2015-09-04.html
+++ b/2015-09-04.html
@@ -7,11 +7,13 @@
     <title>ChawLann</title>
   </head>
   <body>
-    <div id="the-girl-say">
-      你竟然公然勾搭妹纸。
+    <div id="the-girl-say" style="margin-top: 20vh">
+      那我 去写代码
+      <br />
+      <img src="static/images/20150904.jpg" style="width: 30vw;" />
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-06 -</div>
+    <div id="date">- 2015-09-04 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
