--- a/2015-09-05.html
+++ b/2015-09-05.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      你竟然公然勾搭妹纸。
+      今晚只吃了半碗饭= =
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-06 -</div>
+    <div id="date">- 2015-09-03 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
