--- a/2015-09-07.html
+++ b/2015-09-07.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      自己掙錢哼哼。
+      忘都忘了 還會記得是什麼體驗嗎
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-08 -</div>
+    <div id="date">- 2015-09-07 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
