--- a/2015-09-09.html
+++ b/2015-09-09.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      比照騙好看一丟丟。
+      尋找一個 兩腎齊全的男票。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-13 -</div>
+    <div id="date">- 2015-09-09 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
