--- a/2015-09-10.html
+++ b/2015-09-10.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      比照騙好看一丟丟。
+      這麼溫馨的時候 嫑講作業辣
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-13 -</div>
+    <div id="date">- 2015-09-10 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
