--- a/2015-09-11.html
+++ b/2015-09-11.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      比照騙好看一丟丟。
+      你那麼喜歡吃醋 送你一瓶好了。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-13 -</div>
+    <div id="date">- 2015-09-11 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
