--- a/2015-09-12.html
+++ b/2015-09-12.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      比照騙好看一丟丟。
+      LittleWater 已回收一條訊息（害羞）
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-13 -</div>
+    <div id="date">- 2015-09-12 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
