--- a/2015-09-13.html
+++ b/2015-09-13.html
@@ -8,11 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      我可愛嗎？
-      不開森 不肥答我。
+      比照騙好看一丟丟。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-14 -</div>
+    <div id="date">- 2015-09-13 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
