--- a/2015-09-14.html
+++ b/2015-09-14.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="the-girl-say">
-      我只是害羞。
+      我可愛嗎？
+      不開森 不肥答我。
     </div>
     <div id="author">- ChawLann -</div>
     <div id="date">- 2015-09-14 -</div>
