--- a/2015-09-16.html
+++ b/2015-09-16.html
@@ -7,15 +7,13 @@
     <title>ChawLann</title>
   </head>
   <body>
-    <div id="the-girl-say" style="margin-top: 30vh">
-      达达学长~ 周末有空吗~
+    <div id="the-girl-say" style="margin-top: 20vh">
+      我們的合照
       <br />
-      人家电脑坏掉了辣
-      <br />
-      你能不能帮人家修一下呀
+      <img src="static/images/20150916.jpg" style="width: 30vw;" />
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-17 -</div>
+    <div id="date">- 2015-09-16 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
