--- a/2015-09-18.html
+++ b/2015-09-18.html
@@ -7,11 +7,11 @@
     <title>ChawLann</title>
   </head>
   <body>
-    <div id="the-girl-say">
-      眼熟的鍵盤貼
+    <div id="the-girl-say" style="margin-top: 30vh">
+      啵一個原不原諒
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-20 -</div>
+    <div id="date">- 2015-09-18 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
