--- a/2015-09-19.html
+++ b/2015-09-19.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      眼熟的鍵盤貼
+      別人說 我长这么好看 竟然不喜欢照相
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-20 -</div>
+    <div id="date">- 2015-09-19 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
