--- a/2015-09-17.html
+++ b/2015-09-17.html
@@ -7,11 +7,15 @@
     <title>ChawLann</title>
   </head>
   <body>
-    <div id="the-girl-say">
-      眼熟的鍵盤貼
+    <div id="the-girl-say" style="margin-top: 30vh">
+      达达学长~ 周末有空吗~
+      <br />
+      人家电脑坏掉了辣
+      <br />
+      你能不能帮人家修一下呀
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-20 -</div>
+    <div id="date">- 2015-09-17 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
