--- a/2015-09-20.html
+++ b/2015-09-20.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      你一定是計軟男森的公敵。
+      眼熟的鍵盤貼
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-22 -</div>
+    <div id="date">- 2015-09-20 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
