--- a/2015-09-22.html
+++ b/2015-09-22.html
@@ -8,12 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      变态 变态 变态。
-      <br />
-      我说了三遍。
+      你一定是計軟男森的公敵。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-23 -</div>
+    <div id="date">- 2015-09-22 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
