--- a/2015-09-25.html
+++ b/2015-09-25.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" type="text/css" media="screen" href="static/styles/base.css">
     <title>ChawLann</title>
   </head>
   <body>
     <div id="the-girl-say">
-      我怎么可能会有文艺的话。
+      今天戴你的表啧啧啧。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-27 -</div>
+    <div id="date">- 2015-09-25 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
