--- a/2015-09-27.html
+++ b/2015-09-27.html
@@ -8,11 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      沒有被男生表白過 /
-      那你要珍惜這次機會啊
+      我怎么可能会有文艺的话。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-29 -</div>
+    <div id="date">- 2015-09-27 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
