--- a/2015-09-28.html
+++ b/2015-09-28.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <div id="the-girl-say">
-      沒有被男生表白過 /
-      那你要珍惜這次機會啊
+      同鄉會出遊不去嗎 /
+      不去 /
+      為啥 /
+      陪男票
+      _(:з)∠)_
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-09-29 -</div>
+    <div id="date">- 2015-09-28 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
