--- a/2015-09-29.html
+++ b/2015-09-29.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <div id="the-girl-say">
-      我們是 負能量 cp
+      沒有被男生表白過 /
+      那你要珍惜這次機會啊
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-10-01 -</div>
+    <div id="date">- 2015-09-29 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
