--- a/2015-09-30.html
+++ b/2015-09-30.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="the-girl-say">
-      我們是 負能量 cp
+      你喜歡我什麼捏。
     </div>
     <div id="author">- ChawLann -</div>
-    <div id="date">- 2015-10-01 -</div>
+    <div id="date">- 2015-09-30 -</div>
     <div id="the-girl">
       《文藝少女養成記》
     </div>
